--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsf-mattermostable",
-  "version": "0.0.1",
+  "version": "0.0.11",
   "description": "a module for exposing a very super simple API for sending/receiving mattermost messages as an eventemitter",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "babel-polyfill": "^6.26.0",
     "isomorphic-fetch": "^2.2.1",
     "mattermost-redux": "Connoropolous/mattermost-redux",
+    "timetrickle": "^0.1.2",
     "ws": "^5.0.0"
   }
 }
